--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,9 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
-inputs:
-  myInput:              # change this
-    description: 'input description here'
-    default: 'default value if applicable'
+name: 'Auto Release Draft'
+description: 'Drafts a GitHub release with the changes introduced by a newly created version tag.'
+author: 'Enrico Campidoglio'
+outputs:
+  release-url:
+    description: 'The URL of the GitHub release that was drafted'
 runs:
   using: 'node12'
   main: 'dist/index.js'
