--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -34,6 +34,7 @@
       "@typescript-eslint/no-for-in-array": "error",
       "@typescript-eslint/no-inferrable-types": "error",
       "@typescript-eslint/no-misused-new": "error",
+      "no-multi-spaces": ["error", {"ignoreEOLComments": true}],
       "@typescript-eslint/no-namespace": "error",
       "@typescript-eslint/no-non-null-assertion": "warn",
       "@typescript-eslint/no-object-literal-type-assertion": "error",
