--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
+    "@types/jest-when": "^2.7.0",
     "@types/node": "^12.7.12",
     "@types/semver": "^6.2.0",
     "@typescript-eslint/parser": "^2.8.0",
@@ -41,6 +42,7 @@
     "eslint-plugin-jest": "^22.21.0",
     "jest": "^24.9.0",
     "jest-circus": "^24.9.0",
+    "jest-when": "^2.7.0",
     "js-yaml": "^3.13.1",
     "prettier": "^1.19.1",
     "ts-jest": "^24.2.0",
