Adds the repo-token input parameter to the metadata

--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,10 @@
 name: 'Auto Release Draft'
 description: 'Drafts a GitHub release with the changes introduced by a newly created version tag.'
 author: 'Enrico Campidoglio'
+inputs:
+  repo-token:
+    description: 'The GITHUB_TOKEN used to authenticate to the current repository'
+    required: true
 outputs:
   release-url:
     description: 'The URL of the GitHub release that was drafted'
