Passes the secret repository token in the test workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,8 @@ jobs:
       - name: Create a release draft for a version tag
         id: create-release-draft
         uses: ./
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN  }}
       - name: Print the URL of the release draft
         run: echo ${{ steps.create-release-draft.outputs.release-url }}
     
