Only prints the release URL if it's not empty
While Bash will gladly echo an empty string, PowerShell throws
an error if the Write-Output cmdlet is passed an empty string.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,5 +20,5 @@ jobs:
         with:
           repo-token: ${{ secrets.GITHUB_TOKEN  }}
       - name: Print the URL of the release draft
+        if: steps.create-release-draft.outputs.release-url != ''
         run: echo ${{ steps.create-release-draft.outputs.release-url }}
-    
